[package]
name = "yehorbolt_sql_parser"
version = "0.1.0"

authors = ["Yehor Bolotov <bolotov.yehor@gmail.com>"]
description = "A simple SQL parser written in Rust."
keywords = ["pest", "parser", "sql parser"]

repository = "https://github.com/yehorbolt/yehorbolt_sql_parser"
license = "MIT"
readme = "README.md"



[dependencies]
anyhow = "1.0.75"
clap = "4.4.8"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"

