[package]
name = "yehorbolt_sql_parser"
version = "0.1.2"

authors = ["Yehor Bolotov <bolotov.yehor@gmail.com>"]
description = "A simple SQL parser written in Rust."
keywords = ["pest", "parser", "sql"]

repository = "https://github.com/yehorbolt/yehorbolt_sql_parser"
documentation = "https://docs.rs/yehorbolt_sql_parser/"
readme = "README.md"
license = "MIT"


[dependencies]
anyhow = "1.0.75"
clap = "4.4.8"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"

