[package]
name = "yehorbolt_sql_parser"
version = "0.1.9"

authors = ["Yehor Bolotov <bolotov.yehor@gmail.com>"]
description = "This is a simple SQL parser written in Rust using the pest library. The parser supports parsing CREATE TABLE statements with column definitions."
keywords = ["pest", "parser", "sql"]

repository = "https://github.com/yehorbolt/yehorbolt_sql_parser"
documentation = "https://docs.rs/yehorbolt_sql_parser/"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"

